--- a/src/app/recipes/recipe-list/recipe-list.component.sass
+++ b/src/app/recipes/recipe-list/recipe-list.component.sass
@@ -9,6 +9,7 @@
 .list-container
   flex-grow: 1
   margin: 15pt
+  margin-bottom: 64pt
 
 .recipe-item
   color: inherit
